Fix footer alignment issues.

--- a/design/sass/style.scss
+++ b/design/sass/style.scss
@@ -185,7 +185,7 @@ header#banner {
 
    @mixin flex-container() {
       @include flexbox();
-      @include justify-content(space-around);
+      @include justify-content(space-between);
       @include align-items(flex-start);
       @include flex-flow(row wrap);
    }
@@ -199,12 +199,16 @@ header#banner {
 
       line-height: $lh_small;
 
-      a {
+      a, a:visited {
+         @include flex-container();
+
          width: 100%;
          text-decoration: none;
          color: #444;
 
-         @include flex-container();
+         &:hover, &:active {
+            color: $light_purple;
+         }
       }
 
       h1, h2 {
@@ -274,13 +278,8 @@ footer {
 
    .footer_item {
       width: 40%;
-      max-width: 360px;
+      max-width: 461px;
       padding-bottom: $fsh1;
-
-      margin: {
-         right: 1%;
-         left: 1%;
-      };
 
       h1 {
          font-size: $fsh4;
